--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Zaw Myat Min</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app"> Hello World</div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
