fix mobile view

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Zaw Myat Min</title>
+    <style>
+      body{
+        background-color: rgb(206 199 191);
+      }
+    </style>
   </head>
   <body>
     <div id="app"> Hello World</div>
